2014-09-10  Albert Graef  <aggraef@gmail.com>

	* 0.61 release.

	* configure.ac: Fixes in the build system when linking against the
	static LLVM libs (LLVM 3.5).

2014-09-09  Albert Graef  <aggraef@gmail.com>

	* More LLVM 3.5 compatibility fixes related to the batch compiler.
	LLVM 3.5 now has a new user_iterator class to iterate over the
	uses of variables and functions in an instruction; the old
	use_iterator class can't be used for that purpose any more.

	* interpreter.cc (interpreter::compiler): For LLVM 3.3 and later,
	let llc create native objects directly from the LLVM source. This
	should speed up compilation in the batch compiler and also work
	around bugs which make llc generate invalid native assembler code
	on some systems.

2014-09-08  Albert Graef  <aggraef@gmail.com>

	* LLVM 3.5 compatibility fixes

2014-03-24  Albert Gräf  <aggraef@gmail.com>

	* 0.60 release.

	* interpreter.cc, runtime.cc, etc/pure-mode.el.in,
	test/test020.pure: minor fixes for OS X compatibility.

2014-03-09  Albert Graef  <aggraef@gmail.com>

	* runtime.cc/hh: Add some helper functions to serialize accesses
	to the runtime, to be used if the runtime needs to be called from
	multithreaded C/C++ code. This essentially implements a global
	interpreter lock (GIL) which isn't nice, but can't really be
	avoided in some situations until the Pure runtime becomes fully
	thread-safe.

2014-03-02  Albert Graef  <aggraef@gmail.com>

	* interpreter.cc/hh, runtime.cc: Keep track of global interpreter
	contexts, to make switching between interpreter instances more
	robust. Specifically, in batch-compiled modules there's only a
	single global instance of the sstk (shadow stack) and fptr
	(environment) variables, so we need to ensure that these aren't
	clobbered if multiple interpreter instances run in concert.
	Similar considerations apply to the static baseptr member which is
	used to check for stack overflows; in this case we also try to