@@ -1,3 +1,8 @@
+2014-09-15  Albert Graef  <aggraef@gmail.com>
+
+	* pure.cc, interpreter.cc/hh, runtime.cc: Add llc -m code
+	generation options for the batch compiler (experimental).
+
 2014-09-10  Albert Graef  <aggraef@gmail.com>
 
 	* 0.61 release.
